[package]
name = "rtx"
version = "0.0.1"
author = "mills"

[dependencies]

# For riscv
[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10.1"
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[package.metadata.bootimage]
build-command = ["build"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

run-command = [
    "qemu-system-riscv64", "", "" 
]

